# 2CourseWorks

./: .gitignore  CMakeLists.txt  README.md
OOP/Lab 1/: CMakeLists.txt  README.md  brackets_check.cpp  main.cpp  main_tests.cpp
OOP/Lab 1/include/: brackets_check.h  isBracketsValid.h
OOP/Lab 1/src/: brackets_check.cpp  isBracketsValid.cpp
OOP/Lab 1/test/: main_tests.cpp
OOP/Lab 2/: CMakeLists.txt  main.cpp
OOP/Lab 2/include/: Octal.hpp  Serializer.hpp  Serializible.hpp
OOP/Lab 2/src/: Octal.cpp
OOP/Lab 2/test/: main_test.cpp  main_tests.cpp
OOP/Lab 7/: CMakeLists.txt  README.md
OOP/Lab 7/include/: Location.hpp  LocationRedactor.hpp  Observer.hpp  utils.hpp
OOP/Lab 7/include/battle/: BattleManager.hpp  BattleVisitor.hpp
OOP/Lab 7/include/generators/: idGenerator.hpp
OOP/Lab 7/include/mob/: Mob.hpp  MobFabric.hpp  MobTypeCvt.hpp  allConcretMobsHeaders.hpp  allMobsHeadersInOneHeader.hpp
OOP/Lab 7/include/mob/concretMobs/: Dragon.hpp  Elf.hpp  KnightStranger.hpp
OOP/Lab 7/include/undoManager/: UndoManager.hpp  UndoVisitor.hpp
OOP/Lab 7/src/: Location.cpp  LocationRedactor.cpp  utils.cpp
OOP/Lab 7/src/battle/: BattleManager.cpp
OOP/Lab 7/src/generators/: idGenerator.cpp
OOP/Lab 7/src/mob/: Mob copy.cpp  Mob.cpp  MobTypeCvt.cpp
OOP/Lab 7/src/undoManager/: UndoManager.cpp
OOP/Lab 7/test/: idGeneratorTest.cpp  mathMod.cpp  mobTest.cpp  redactorTest.cpp  utilsTest.cpp
OS/CourseWork/: CMakeLists.txt  Game.cpp  GameClient.cpp  GameHub.cpp  game.cpp  gameClient.cpp  gameServer.cpp  serverMain.cpp
OS/CourseWork/include/: GameManager.hpp  MessageFormsGenerator.hpp  MessageManager.hpp  MessageQueue.hpp  Server.hpp  isNowScanning.hpp  print.hpp
OS/CourseWork/include/Game/: GameClientManager.hpp  GameLogger.hpp  GameManager.hpp  GameProcessCreator.hpp
OS/CourseWork/include/Game/managers/: GameClientManager.hpp  GameManager.hpp
OS/CourseWork/include/Game/messages/: GameMessageTypes.hpp  Message.hpp  messageTypes.hpp
OS/CourseWork/include/Game/messages/concretMessages/: allConcretMessages.hpp
OS/CourseWork/include/Game/messages/concretMessages/interfaces/: IDisconnect.hpp  IGuessWord.hpp  (+2 more)
OS/CourseWork/include/Game/messages/fabric/: DisconnectFabric.hpp  GuessWordFabric.hpp  SelectWordFabric.hpp  StartGameFabric.hpp
OS/CourseWork/include/Game/player/: Player.hpp
OS/CourseWork/include/Game/visitors/: MessageVisitor.hpp
OS/CourseWork/include/Messages/: Message.hpp  MessageFormsGenerator.hpp  MessageManager.hpp  MessageObserver.hpp  MessageTypes.hpp  MessageVisitor.hpp
OS/CourseWork/include/Messages/concretMessages/: DataMessage.hpp  allConcretMessages.hpp
OS/CourseWork/include/Messages/concretMessages/interfaces/: IAuthMessage.hpp  ICreateNewGame.hpp  IGetLogins.hpp  IInviteToGame.hpp  IPingMessage.hpp
OS/CourseWork/include/Messages/concretMessages/realizations/: AuthMessage.hpp  CreateNewGame.hpp  GetLogins.hpp  InviteToGame.hpp  PingMessage.hpp
OS/CourseWork/include/Messages/messageFabric/: MessageFabric.hpp
OS/CourseWork/include/Messages/messageFabric/ConcretFabric/: AuthMessageFabric.hpp  CreateNewGameFabric.hpp  GetLoginsMessageFabric.hpp  IMessageFabric.hpp  InviteToGameFabric.hpp  PingMessageFabric.hpp
OS/CourseWork/include/Network/: Client.hpp  GameServer.hpp  Server.hpp  ServerManager.hpp  ServerMessageManager.hpp  Socket.hpp  ports.hpp
OS/CourseWork/include/Network/concretServers/: Client.hpp  Server.hpp
OS/CourseWork/include/Network/interfaces/: IClient.hpp  IServer.hpp
OS/CourseWork/include/Network/managers/: ClientManager.hpp  ServerManager.hpp
OS/CourseWork/src/: Client.cpp  GameManager.cpp  MessageFormsGenerator.cpp  MessageManager.cpp  Server.cpp  print.cpp
OS/CourseWork/src/Game/: GameClientManager.cpp  GameLogger.cpp  GameManager.cpp  GameProcessCreator.cpp
OS/CourseWork/src/Game/managers/: GameClientManager.cpp  GameManager.cpp
OS/CourseWork/src/Game/messages/fabric/: DisconnectFabric.cpp  GuessWordFabric.cpp  SelectWordFabric.cpp  StartGameFabric.cpp
OS/CourseWork/src/Game/messages/realizations/: Disconnect.cpp  GuessWord.cpp  SelectWord.cpp  StartGame.cpp
OS/CourseWork/src/Game/player/: Player.cpp
OS/CourseWork/src/Messages/: MessageFormsGenerator.cpp
OS/CourseWork/src/Messages/concretMessages/: DataMessage.cpp
OS/CourseWork/src/Messages/concretMessages/realizations/: AuthMessage.cpp  CreateNewGame.cpp  GetLogins.cpp  InviteToGame.cpp  PingMessage.cpp
OS/CourseWork/src/Messages/messageFabric/: MessageFabric.cpp
OS/CourseWork/src/Messages/messageFabric/ConcretFabric/: AuthMessageFabric.cpp  CreateNewGameFabric.cpp  GetLoginsMessageFabric.cpp  InviteToGameFabric.cpp  PingMessageFabric.cpp
OS/CourseWork/src/Network/: Client.cpp  GameServer.cpp  Server.cpp  ServerManager.cpp  ServerMessageManager.cpp
OS/CourseWork/src/Network/concretServers/: Client.cpp  Server.cpp
OS/CourseWork/src/Network/managers/: ClientManager.cpp  ServerManager.cpp
OS/Lab 2/Unix/: CMakeLists.txt  Log.csv  Log.xlsx  Report.txt  graphics.py  main.cpp
OS/Lab 2/Unix/include/: HoarSort.hpp  HoarSorter.hpp  HronoMeter.hpp  Logger.hpp  MyLogger.hpp  Parallelable.hpp  ThreadPool.hpp  Threader.hpp
OS/Lab 2/Unix/src/: HoarSort.cpp  HoarSorter.cpp  HronoMeter.cpp  Log.csv  Logger.cpp  ThreadPool.cpp  Threader.cpp
OS/Lab 4/Windows/: CMakeLists.txt  Makefile  dynamicProg.cpp  linkedProg.cpp
OS/Lab 4/Windows/dll_sources/: CMakeLists.txt
OS/Lab 4/Windows/dll_sources/include/: 1SinIntegral.hpp  3PrimeCounter.hpp  lib1.hpp  lib2.hpp  realizationType.hpp
OS/Lab 4/Windows/dll_sources/src/: 1SinIntegral.cpp  3PrimeCounter.cpp  lib1.cpp  lib2.cpp
OS/Lab 5-7/Windows/: CMakeLists.txt  CalculatingCenter.cpp  ControlCenter.cpp  Director_main.cpp
OS/Lab 5-7/Windows/include/: BinTree.hpp  CalcCenterCommands.hpp  Client.hpp  Director.hpp  Listener.hpp  MessageQueue.hpp  Observer.hpp  Server.hpp  Topology.hpp  Worker.hpp  bufferSize.hpp  print.hpp  safeBool.hpp
OS/Lab 5-7/Windows/include/Socket/: SocketManager.hpp
OS/Lab 5-7/Windows/src/: BinTree.cpp  Client.cpp  Server.cpp  SocketManager.cpp  safeBool.cpp
(+133 files in other folders)
